# HDalitzEle

./: CMakeLists.txt  README.md  Significance.py  env.sh  env_ana.sh  environment.yml  rdfxAna.C  rdfxAnaRun.py  requirements.txt  requirements_c.txt  setup.sh  setup_ana.sh  skimTree.py
Misc/EnergyCorr/: xAna.py
Misc/EnergyCorr/.ipynb_checkpoints/: skimTree-checkpoint.ipynb  xAna-checkpoint.ipynb
Misc/GENstudy/: GSFtrack.ipynb  GenPlot.ipynb  RecoVars.ipynb  jitTest.ipynb  rdfGEN.C  rdfGENDYJets.C  rdfGENDYJetsRun.py  rdfGENQCD.C  rdfGENQCDRun.py  rdfGENRun.py
Misc/GenStudy/: CMS_lumi.py  Conversion.ipynb  HLT_expyield.py  HLT_sigeff.py  RecoLevel.C  RecoLevel_gjets.C  RecoLevel_qcd.C  TdrStyle.py  gsfPtSum.C  plotUtil.py  plot_EleRecoVar1D.py  plot_GenMatch.C  plot_GenStudy.py  plot_corr.C  plot_simplecomp.py  plot_singlevar1Dcheck.py  plot_singlevar2Dcheck.py  plot_spatial.py  run.C  run.py  run_GJets.py  run_QCD.py  run_gjets.C
Misc/ID_Trainer/: PrepareData_MergedID.py  README.md  Trainer-HDalitz-dask.py  Trainer-HDalitz-hyper.py  TrainerRun.sh
Misc/MergedIDEff/: EnCalib.py  FeatureCompRadius.py  FeatureComparison.py  FeaturePlotParam_MergedIDEB2Gsf.json  MergedID_1DEff.py  MergedID_2DEff.py  MergedID_unc.py  Untitled.ipynb  Untitled1.ipynb  effComp.ipynb  rdfZmumug.C  rdfZmumugRun.py  skimTree.py  test.root  testSkimZg.root  zMass.ipynb
cmake/: Findxgboost.cmake
config/: UL2016postVFP_Data.yaml  UL2016postVFP_Data_Merged.yaml  UL2016postVFP_Data_Resolved.yaml  UL2016postVFP_SignalMC.yaml  UL2016postVFP_SignalMC_Merged.yaml  UL2016postVFP_SignalMC_Resolved.yaml  UL2016preVFP_Data.yaml  UL2016preVFP_Data_Merged.yaml  UL2016preVFP_Data_Resolved.yaml  UL2016preVFP_SignalMC.yaml  UL2016preVFP_SignalMC_Merged.yaml  UL2016preVFP_SignalMC_Resolved.yaml  UL2017_2018_Plots.yaml  UL2017_Data.yaml  UL2017_Data_Merged.yaml  UL2017_Data_Resolved.yaml  UL2017_Plots.yaml  UL2017_SignalMC.yaml  UL2017_SignalMC_Merged.yaml  UL2017_SignalMC_Resolved.yaml  UL2018_Data.yaml  UL2018_Data_Merged.yaml  UL2018_Data_Resolved.yaml  UL2018_Plots.yaml  UL2018_SignalMC.yaml  UL2018_SignalMC_Merged.yaml  UL2018_SignalMC_Resolved.yaml  ULfullRun2_Plots.yaml  ULfullRun2_Plots_Merged.yaml  ULfullRun2_Plots_ResolvedMerged.yaml
config_check/: UL2016postVFP_Data_Merged.yaml  UL2016postVFP_Data_Resolved.yaml  UL2016postVFP_SignalMC_Merged.yaml  UL2016postVFP_SignalMC_Resolved.yaml  UL2016preVFP_Data_Merged.yaml  UL2016preVFP_Data_Resolved.yaml  UL2016preVFP_SignalMC_Merged.yaml  UL2016preVFP_SignalMC_Resolved.yaml  UL2017_Data_Merged.yaml  UL2017_Data_Merged_HLT.yaml  UL2017_Data_Resolved.yaml  UL2017_Data_test_Merged.yaml  UL2017_Data_test_Resolved.yaml  UL2017_SignalMC_Merged.yaml  UL2017_SignalMC_Merged_HLT.yaml  UL2017_SignalMC_Resolved.yaml  UL2017_SignalMC_test_Merged.yaml  UL2017_SignalMC_test_Resolved.yaml  UL2018_Data_Merged.yaml  UL2018_Data_Merged_HLT.yaml  UL2018_Data_Resolved.yaml  UL2018_GJetsMC_Merged.yaml  UL2018_QCDMC_Merged.yaml  UL2018_SignalMC_Merged.yaml  UL2018_SignalMC_Merged_HLT.yaml  UL2018_SignalMC_Resolved.yaml  UL2018_TTJetsMC_Merged.yaml  UL2018_ZGToLLGMC_Merged.yaml  ULfullRun2_Plots_ResolvedMerged.yaml  ULfullRun2_plots_Merged.yaml
flashggFinalFit/: runCombineScripts.sh
flashggFinalFit/Background/: BkgPlots.root  RootDict.cxx  RootDict_rdict.pcm  runBackgroundScripts_HDalitz.sh
flashggFinalFit/Combine/: LimitPlotter.py
flashggFinalFit/Datacard/: makeDatacard_HDalitz.py  makeYields_HDalitz.py  systematics_HDalitz.py
flashggFinalFit/Plots/: makeConfusionMatrix.py  makeSTXSPlot.py  makeSplusBModelPlot.py  plottingTools.py  runMakePlots.sh
flashggFinalFit/Signal/: makeFinalModelPlots_HDalitz.py  runSignalScripts.py  simpleFit_HDalitz.py  simpleFit_HDalitz_Interpolation.py
flashggFinalFit/Trees2WS/: config_HDalitz.py  config_HDalitz_data.py  runTree2WS_HDalitz.py  tree2ws_HDalitz.py  tree2ws_HDalitz_data.py
flashggFinalFit/tools/: TdrStyle.py  commonTools_HDalitz.py
include/: CMS_lumi_modification.h  Categorizer.h  ElectronSel.h  EnCalibrater.h  Generator.h  GsfTracks.h  MergedEnCorrector.h  MergedIDPred.h  PUWeightCalculator.h  PhoR9SSCorrection.h  PhotonSel.h  TMVASafeReader.h  Utilities.h  WeightHandler.h  XGBReader.h  tdrstyle.h
logs/: job_data.out  job_data_resolved.out  job_mc.out  job_mc_resolved.out
misc/: README.md
misc/DiPhoHLTEff/: README.md  mergeTnpNtuples.C  runMergeTnpNtuples.C
misc/EnergyReg/: xAna_v2.C
misc/GenStudy/: xAnaGen.C  xAnaGenDYJets.C  xAnaGenGJets.C  xAnaGenMu.C  xAnaGenQCD.C
misc/ID_Trainer/: PrepareData_MergedID_Dask.py  README.md  WP_optimization.ipynb
misc/MergedIDEff/: runAll.sh  xAna.C
pluginsV2/: EleSelections.h  GenMatching.h  JetSelections.h  PhoR9SSCorrection.h  SampleConfig.py  help.h  puweicalc.h  sigmaEff.py  skim_utilities.h
src/: CMS_lumi_modification.cpp  Categorizer.cpp  ElectronSel.cpp  EnCalibrater.cpp  Generator.cpp  GsfTracks.cpp  MergedAnalysis.cpp  MergedAnalysis_HLTstudy.cpp  MergedEnCorrector.cpp  MergedIDPred.cpp  PUWeightCalculator.cpp  PhoR9SSCorrection.cpp  PhotonSel.cpp  ResolvedAnalysis.cpp  TMVASafeReader.cpp  Utilities.cpp  WeightHandler.cpp  XGBReader.cpp  drawKinematics.cpp  runAnalysis.cpp  runSignificance.cpp  skimTree.cpp  tdrstyle.cpp
(+183 files in other folders)
